# waii-mcp-server

./: LICENSE  README.md  pyproject.toml
commands/: build.txt  install.txt  python_run.txt  upload.txt  uv_run.txt
src/mcp_server_waii/: __init__.py  __main__.py  server.py
