[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_server_waii"]

[project]
name = "mcp-server-waii"
version = "1.0.0"
description = "An MCP server implementation for WAII database interactions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Swaraj Nayegandhi", email = "swaraj.nayegandhi@waii.ai" },
]
keywords = ["mcp", "waii", "database", "ai", "nlp", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=0.1.0",
    "waii-sdk-py>=1.29.2",
    "pydantic>=2.0.0",
    "pandas>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/waii-ai/waii-mcp-server#readme"
Repository = "https://github.com/waii-ai/waii-mcp-server.git"

[project.scripts]
mcp-server-waii = "mcp_server_waii:main"